gulliver/js/maborak/core/stylesheet/default.css
/* ... */
.module_app_input___gray_readOnly
{
	padding:1px;
	border:1px solid #AAA;
	padding-left:3px;
	background: #EBEBE4;/*#FFFFFF url(../images/input_back.gif) repeat-x;*/
	background-position:0px 0px;
	color	:#333333;
	font	:normal 8pt sans-serif;
}
.module_app_inputHover___gray
{
	border:1px solid #AAA;
}
.module_app_inputPassed___gray
{
	padding:1px;
	border:1px solid green;
	padding-left:2px;
	padding-right:20px;
	background: #FFFFFF url(../images/ok.png) no-repeat;
	background-position:99% 50%;
	color	:#000000;
	font	:normal 8pt sans-serif;
}
.module_app_inputFailed___gray
{
	border:1px solid red;
	padding:1px;
	padding-left:2px;
	padding-right:20px;
	background: #FFFFFF url(../images/failed.png) no-repeat;
	background-position:99% 50%;
	color	:#000000;
	font	:normal 8pt sans-serif;
}
.module_app_inputFailed_ie___gray
{   
        filter: progid:DXImageTransform.Microsoft.dropshadow(OffX=-1, OffY=-1,color=red) progid:DXImageTransform.Microsoft.dropshadow(OffX=1, OffY=1,color=red);
}
.module_app_inputPassed_ie___gray
{
        filter: progid:DXImageTransform.Microsoft.dropshadow(OffX=-1, OffY=-1,color=green) progid:DXImageTransform.Microsoft.dropshadow(OffX=1, OffY=1,color=green);
}
.module_app_inputDisabled___gray
{
	background-color:#f0f0f0;
	color:#9f9f9f;
}

/*	Theme leimnud.module.app.input	END */
.module_app_select___gray
{
	font:normal 8pt Tahoma,Sans-serif,MiscFi
    border-top-style: double;
xed;
	width:100%;
}

/*	Theme leimnud.module.rss	BEGIN */


.module_rss_container___gray, .module_rss_title___gray, .module_rss_header___gray, .module_rss_separator___gray, .module_rss_item___gray
{
	border:1px solid #AAA;
	text-align:justify;
}

.module_rss_title___gray, .module_rss_header___gray, .module_rss_itemHeader___gray
{
	background	:url(../images/grid.title.gray.gif);
}
.module_rss_itemContainer___gray
{
	border-top:1px solid #cbcbcb;
	overflow:hidden;
	padding:2px;
	background-color:#EEE;
	height:1px;
}
.module_rss_container___gray, .module_rss_separator_gray
{
	background-color:#DFDFDF;
}
.module_rss_container___gray
{
	padding:3px;
	font:normal 8pt Tahoma,sans-serif,MiscFixed;
	width:200px;
}
.module_rss_title___gray
{
	border-bottom-width:0px;
	text-align	:center;
	padding	:4px;
	color	:#000;
	cursor	:default;
	background-position:0px 0px;
}
.module_rss_header___gray
{
	padding:1px;
	text-align:right;
	border-bottom-width:0px;
	background-position:0px -10px;
}
.module_rss_separator___gray
{
	border-bottom-width:0px;
	padding:1px;
	padding-left:5px;
	padding-right:5px;
	overflow:hidden;
}
.module_rss_item___gray
{
	border-bottom-width:0px;
	overflow:hidden;
}
.module_rss_itemLast___gray
{
	border-bottom-width:1px;
}
.module_rss_itemHeader___gray
{
	padding:5px;
	background-position:0px -10px;
	position:relative;
	cursor:pointer;
}
.module_rss_itemPubDate___gray
{
	color	: #808080;
	font	: normal 7pt Tahoma,sans-serif,MiscFixed;
	padding	: 5px;
}
.module_rss_itemHr___gray
{
	border-color	: #808080;
}
.module_rss_itemTitle___gray
{
	color:#000;
}
.module_rss_itemReaded___gray
{
	color:#7f7f7f;
}
.module_rss_itemOver
{
	background-position:0px -50px;
}
.module_rss_itemButtons___gray
{
	position:absolute;
	top:1px;
	right:1px;
}
.module_rss_itemDescription___gray
{

}
.module_rss_itemLink___gray
{
	text-align:right;
	padding-top:10px;
}
/*	Theme leimnud.module.rss	END */

/*	Theme leimnud.module.rss	BEGIN */


.module_rss_container___greenLight, .module_rss_title___greenLight, .module_rss_header___greenLight, .module_rss_separator___greenLight, .module_rss_item___greenLight
{
	border:1px solid #8EB9CF;
}

.module_rss_title___greenLight, .module_rss_header___greenLight, .module_rss_itemHeader___greenLight
{
	background	:url(../images/grid.title.greenLight.gif);
}
.module_rss_itemContainer___greenLight
{
	border-top:1px solid #8EB9CF;
	overflow:hidden;
	padding:2px;
	background-color:#FAFAFA;
}
.module_rss_container___greenLight, .module_rss_separator_greenLight
{
	background-color:#C6D5E0;
}
.module_rss_container___greenLight
{
	padding:3px;
	font:normal 8pt Tahoma,sans-serif,MiscFixed;
	width:300px;
}
.module_rss_title___greenLight
{
	border-bottom-width:0px;
	text-align	:center;
	padding	:4px;
	color	:#000;
	cursor	:default;
	background-position:0px 0px;
}
.module_rss_header___greenLight
{
	padding:1px;
	text-align:right;
	border-bottom-width:0px;
	background-position:0px -10px;
}
.module_rss_separator___greenLight
{
	border-bottom-width:0px;
	overflow:hidden;
}
.module_rss_item___greenLight
{
	border-bottom-width:0px;
	overflow:hidden;
}
.module_rss_itemLast___greenLight
{
	border-bottom-width:1px;
}
.module_rss_itemHeader___greenLight
{
	padding:5px;
	background-position:0px -10px;
	position:relative;
	cursor:pointer;
}
.module_rss_itemOver
{
	background-position:0px -50px;
}
.module_rss_itemButtons___greenLight
{
	position:absolute;
	top:1px;
	right:1px;
}
.module_rss_itemDescription___greenLight
{

}
.module_rss_itemLink___greenLight
{
	text-align:right;
}
.module_rss_itemTitle___greenLight
{
	color:#3F657F;
}
/*	Theme leimnud.module.rss	END */

/* Box Top Model BEGIN */
.boxTop, .boxTopBlue
{
	height:9px;
	padding-left:8px;
	padding-right:8px;
	position:relative;
	overflow:hidden;
}
.boxTop div, .boxTopBlue div
{
	background-color:#FFF;
}
.boxTop div.a, .boxTop div.c, .boxTopBlue div.a, .boxTopBlue div.c
{
	position:absolute;
	width:9px;
	height:9px;
}
.boxTop div.a, .boxTopBlue div.a
{
	left:0px;
	top:0px;
	background-image:url(../images/ftl.png);
	background-color:transparent;
}
.boxTop div.c, .boxTopBlue div.c
{
	top:0px;
	right:0px;
	background-image:url(../images/ftr.png);
	background-color:transparent;
}
.boxTop div.b, .boxTopBlue div.b
{
	width:100%;
	height:9px;
	border-top:1px solid #DADADA;
	background-color:#FFF;
}
/* Box Top Model END */

/* Box Top Model Blue BEGIN */
.boxTopBlue div.c
{
	background-image:url(../images/ftr.blue.gif);
	background-color:transparent;
}
.boxTopBlue div.a
{
	background-image:url(../images/ftl.blue.gif);
	background-color:transparent;
}
/* ... */

